# wisupaa-whisper

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  HOLON.md  holon.yaml
cmd/wisupaa-whisper/: main.cpp
protos/whisper/v1/: whisper.proto
src/: whisper_service.cpp  whisper_service.h
tests/: test_whisper_service.cpp
